# ray-workshop

./: .gitignore  README.md  pyproject.toml
configs/00/: banner.yaml  web-terminal-tooling.yaml
configs/challenges/: broken-rayjob.yaml
configs/facilitator/: README.md
configs/facilitator/ray-cluster/: raycluster-cpu.yaml
configs/facilitator/ray-compute/: rayjob-distributed-stats.yaml
configs/facilitator/ray-data/: pvc-workshop.yaml  rayjob-scale-data.yaml
configs/samples/hardware-profile/: cpu-local-queue.yaml
configs/samples/kueue/: localqueue-default.yaml  localqueue.yaml
docs/: 00-setup.md  01-ray-data-cluster.md  01-workbench-smoke-test.md  02-distributed-compute.md  02-ray-data-cluster.md  03-distributed-compute.md  03-ray-train.md  04-observe-and-manage.md  04-ray-train.md  04-troubleshooting.md  05-troubleshooting.md  architecture.md  facilitator-cheat-sheet.md  prerequisites.md  troubleshooting.md
docs/challenges/: broken_rayjob.md
extras/: aliases.md
extras/data/: README.md  iris.csv
extras/notebooks/: 01-local-smoke.ipynb  01-ray-data-job-client.ipynb  02-distributed-compute-job-client.ipynb  02-ray-data-job-client.ipynb  02-ray-data-rayjob.ipynb  03-distributed-compute-job-client.ipynb  03-distributed-compute-rayjob.ipynb  03-ray-train-job-client.ipynb  04-observe-and-manage.ipynb  04-ray-train-job-client.ipynb  workshop_bootstrap.py
extras/python/: workshop_common.py
extras/scripts/: distributed_stats.py  scale_data.py  train_fashion_mnist.py
scripts/: functions.sh  sanity_check.sh  setup.sh
(+1 files in other folders)
